update Query interface return type, update tests, and add HeaderConstants in common